--- a/login.html
+++ b/login.html
@@ -55,7 +55,6 @@
     footer ul li a { color:#d1d5db; text-decoration:none; }
     footer ul li a:hover { color:#fff; }
     footer .text-center { text-align:center; margin-top:20px; font-size:.875rem; color:#9ca3af; }
-    footer div { margin-bottom:16px; }
   </style>
 </head>
 <body>
@@ -91,9 +90,11 @@
         <div class="btn-center">
           <button type="submit" class="btn btn-black w-full">Login</button>
         </div>
+
         <div class="btn-center">
           <button type="button" id="resendVerifyBtn" class="btn btn-ghost w-full" style="display:none;">Resend Verification</button>
         </div>
+
         <div class="btn-center">
           <a href="signup.html" class="btn btn-ghost w-full">Don't have an account? Sign Up</a>
         </div>
@@ -108,8 +109,7 @@
   </main>
 
   <!-- Footer -->
-  <!-- Footer (same as index page) -->
-  <footer class="bg-gray-900 text-gray-300 py-10">
+  <footer>
     <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-3 gap-8">
       <div>
         <h4 class="text-xl font-bold text-white mb-3">Sitegen Hosting</h4>
@@ -120,7 +120,7 @@
         <ul class="space-y-1 text-sm">
           <li><a href="plans.html" class="hover:text-white">Plans</a></li>
           <li><a href="features.html" class="hover:text-white">Features</a></li>
-          <li><a href="about.html" class="hover:text-white">About Us</a></li>
+          <li><a href="about.html" class="hover:text-white">About</a></li>
           <li><a href="contact.html" class="hover:text-white">Contact</a></li>
         </ul>
       </div>
@@ -130,9 +130,8 @@
         <p>Phone: +1 (800) 123-4567</p>
       </div>
     </div>
-    <div class="mt-8 text-center text-sm text-gray-500">© 2025 Sitegen Hosting. All rights reserved.</div>
+    <div class="text-center">© 2025 Sitegen Hosting. All rights reserved.</div>
   </footer>
-
 
   <!-- Toasts -->
   <div id="toastContainer"></div>
